# ragagent

./: .env.example  .gitignore  Dockerfile.api  Dockerfile.worker  README.md  docker-compose.yaml  pyproject.toml  schema.dbml
migrations/: 20250226_01_Ibvx7.rollback.sql  20250226_01_Ibvx7.sql  20250227_01_R9f7y.rollback.sql  20250227_01_R9f7y.sql  20250227_02_l1CHq.rollback.sql  20250227_02_l1CHq.sql  20250302_01_XPuOc.rollback.sql  20250302_01_XPuOc.sql
src/: config.py  database.py  doc_loader.py  embeddings.py  logger.py  main.py  worker.py
